--- a/Exercise2/exercise2.html
+++ b/Exercise2/exercise2.html
@@ -7,20 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
     <style>
-        .container {
-        display: inline-blox;
-        grid-gap: 30px;
-        margin-left: 25%;
-        margin-right: 25%;
-        padding: 30px;
-        align-content: center;
-        }
 
-        .container > div {
-        text-align: center;
+      .container {
+        margin-left: 5%;
+        margin-right: 5%;
+        padding: 30px;
         padding: 30px 0;
-        font-size: 30px;
-        }
+
+      }
         
         .btn {
         background-color: black; 
@@ -115,6 +109,11 @@
       productTitle.innerHTML = product.brand +"<br>"  + product.title;
       div.appendChild(productTitle);
       newProduct.addEventListener("click", function(){ productDescription(idx); });
+      column.style.display = "grid";
+      column.style.gridTemplateColumns =  "repeat(3, 1fr)";
+      column.style.gridGap = "10px";
+      column.style.gridAutoRows= "minmax(100px, auto)";
+      column.style.fontSize= "30px";
     };
     
     function productDescription(idx) {
@@ -164,8 +163,9 @@
             var product = allObjects[shoppingCart[i].index];
             let div = document.createElement("div");
             div.innerHTML = shoppingCart[i].count + " x " + product.title + " " + " - " + product.price + " €";
-            div.style.display= "flex";
-            div.style.alignContent = "flex-start";
+            element.style.display= "flex";
+            element.style.alignContent = "flex-start";
+            element.style.flexDirection = "column";
             element.appendChild(div);
             total += parseFloat(product.price)*shoppingCart[i].count;
           }
@@ -180,7 +180,12 @@
           clearCart = document.createElement("button") ;
           clearCart.innerHTML = "Clear cart";
           btn.appendChild(clearCart);
-          clearCart.addEventListener("click", ()=>{ shoppingCart = [];showCart();});
+          clearCart.addEventListener("click", ()=>{ 
+            shoppingCart = [];
+            showCart();
+            countEl = document.getElementById("total-count");
+            countEl.innerHTML = shoppingCart.length;
+          });
           clearCart.style.border="2px solid #4CAF50";
           clearCart.style.backgroundColor="black";
           clearCart.style.color= "white";
